test/tasty/neg/src-3/TargetNameAnnot.scala
package tastytest

object TargetNameAnnot {

  @annotation.targetName("doubleplus") def ++ : Unit = println("++")

  def foo = 23

}
